# rust-beagleboardx15-demo

./: LICENSE-MIT  README.md
bare-metal/ipu-demo/: .gitignore  Cargo.toml  README.md  am5728_ipu.ld  build.rs
bare-metal/ipu-demo/.cargo/: config
bare-metal/ipu-demo/src/: am5728.rs  main.rs  resource_table.rs  rpmsg.rs  string.rs  trace.rs
bare-metal/ipu-demo/src/version/: mod.rs
bare-metal/ipu-demo/vring/: Cargo.toml
bare-metal/ipu-demo/vring/src/: lib.rs
linux/socket-demo/: Cargo.toml  README.md
linux/socket-demo/.cargo/: config
linux/socket-demo/src/: main.rs
