[package]
name = "ipu-demo"
version = "0.1.0"
authors = ["Jonathan Pallant <jonathan.pallant@cambridgeconsultants.com>"]

[profile.release]
lto = true
debug = true
opt-level = "s"

[dependencies.embedded-hal]
version = "0.2.1"
features = ["unproven"]

[dependencies.cortex-m]
version = "0.5"

[dependencies.cortex-m-rt]
path = "./third_party/cortex-m-rt"
features = ["device"]

[dependencies.vring]
path = "./vring"

[dependencies.volatile-register]
version = "0.2"

